@@ -4,7 +4,7 @@ require_once INCL_DIR . 'user_functions.php';
 require_once INCL_DIR . 'bt_client_functions.php';
 require_once INCL_DIR . 'html_functions.php';
 check_user_status();
-global $site_config;
+global $site_config, $lang;
 
 $lang = array_merge(load_language('global'), load_language('peerlist'));
 $id = (int)$_GET['id'];
@@ -22,44 +22,59 @@ $HTMLOUT = '';
 function dltable($name, $arr, $torrent)
 {
     global $CURUSER, $lang, $site_config;
-    $htmlout = '';
     if (!count($arr)) {
-        return $htmlout = "<div><b>{$lang['peerslist_no']} $name {$lang['peerslist_data_available']}</b></div>\n";
+        return $htmlout = main_div("<div><b>{$lang['peerslist_no']} $name {$lang['peerslist_data_available']}</b></div>");
     }
-    $htmlout = "\n";
-    $htmlout .= "<table width='100%' class='main' >\n";
-    $htmlout .= "<tr><td colspan='11' class='colhead'>" . count($arr) . " $name</td></tr>" . "<tr><td class='colhead'>{$lang['peerslist_user_ip']}</td>" . "<td class='colhead'>{$lang['peerslist_connectable']}</td>" . "<td class='colhead'>{$lang['peerslist_uploaded']}</td>" . "<td class='colhead'>{$lang['peerslist_rate']}</td>" . '' . ($site_config['ratio_free'] ? '' : "<td class='colhead'>{$lang['peerslist_downloaded']}</td>") . '' . '' . ($site_config['ratio_free'] ? '' : "<td class='colhead'>{$lang['peerslist_rate']}</td>") . '' . "<td class='colhead'>{$lang['peerslist_ratio']}</td>" . "<td class='colhead'>{$lang['peerslist_complete']}</td>" . "<td class='colhead'>{$lang['peerslist_connected']}</td>" . "<td class='colhead'>{$lang['peerslist_idle']}</td>" . "<td class='colhead'>{$lang['peerslist_client']}</td></tr>\n";
+    $heading = "
+        <tr>
+            <th>{$lang['peerslist_user_ip']}</th>
+            <th>{$lang['peerslist_connectable']}</th>
+            <th>{$lang['peerslist_uploaded']}</th>
+            <th>{$lang['peerslist_rate']}</th>" . ($site_config['ratio_free'] ? '' : "
+            <th>{$lang['peerslist_downloaded']}</th>") . ($site_config['ratio_free'] ? '' : "
+            <th>{$lang['peerslist_rate']}</th>") . "
+            <th>{$lang['peerslist_ratio']}</th>
+            <th>{$lang['peerslist_complete']}</th>
+            <th>{$lang['peerslist_connected']}</th>
+            <th>{$lang['peerslist_idle']}</th>
+            <th>{$lang['peerslist_client']}</th>
+        </tr>";
     $now = TIME_NOW;
     $mod = $CURUSER['class'] >= UC_STAFF;
+    $body = '';
     foreach ($arr as $e) {
-        $htmlout .= "<tr>\n";
+        $body .= "
+        <tr>";
         if ($e['username']) {
             if ((($e['tanonymous'] == 'yes' && $e['owner'] == $e['userid'] || $e['anonymous'] == 'yes' or $e['paranoia'] >= 2) && $CURUSER['id'] != $e['userid']) && $CURUSER['class'] < UC_STAFF) {
-                $htmlout .= "<td><b>Kezer Soze</b></td>\n";
+                $body .= "
+            <td><b>Keyser Söze</b></td>";
             } else {
-                $htmlout .= "<td><a href='userdetails.php?id=" . (int)$e['userid'] . "'><b>" . htmlsafechars($e['username']) . "</b></a></td>\n";
+                $body .= "
+            <td>" . format_username($e['userid']) . "</td>";
             }
         } else {
-            $htmlout .= '<td>' . ($mod ? $e['ip'] : preg_replace('/\.\d+$/', '.xxx', $e['ip'])) . "</td>\n";
+            $body .= '
+            <td>' . ($mod ? $e['ip'] : preg_replace('/\.\d+$/', '.xxx', $e['ip'])) . "</td>";
         }
         $secs = max(1, ($now - $e['st']) - ($now - $e['la']));
-        $htmlout .= "<td>" . ($e['connectable'] == 'yes' ? "{$lang['peerslist_yes']}" : "<span class='has-text-danger'>{$lang['peerslist_no']}</span>") . "</td>\n";
-        $htmlout .= "<td>" . mksize($e['uploaded']) . "</td>\n";
-        $htmlout .= "<td><span style=\"white-space: nowrap;\">" . mksize(($e['uploaded'] - $e['uploadoffset']) / $secs) . "/s</span></td>\n";
-        $htmlout .= '' . ($site_config['ratio_free'] ? '' : "<td>" . mksize($e['downloaded']) . '</td>') . "\n";
+        $body .= "<td>" . ($e['connectable'] == 'yes' ? "{$lang['peerslist_yes']}" : "<span class='has-text-danger'>{$lang['peerslist_no']}</span>") . "</td>\n";
+        $body .= "<td>" . mksize($e['uploaded']) . "</td>\n";
+        $body .= "<td><span style=\"white-space: nowrap;\">" . mksize(($e['uploaded'] - $e['uploadoffset']) / $secs) . "/s</span></td>\n";
+        $body .= '' . ($site_config['ratio_free'] ? '' : "<td>" . mksize($e['downloaded']) . '</td>') . "\n";
         if ($e['seeder'] == 'no') {
-            $htmlout .= '' . ($site_config['ratio_free'] ? '' : "<td><span style=\"white-space: nowrap;\">" . mksize(($e['downloaded'] - $e['downloadoffset']) / $secs) . '/s</span></td>') . "\n";
+            $body .= '' . ($site_config['ratio_free'] ? '' : "<td><span style=\"white-space: nowrap;\">" . mksize(($e['downloaded'] - $e['downloadoffset']) / $secs) . '/s</span></td>') . "\n";
         } else {
-            $htmlout .= '' . ($site_config['ratio_free'] ? '' : "<td><span style=\"white-space: nowrap;\">" . mksize(($e['downloaded'] - $e['downloadoffset']) / max(1, $e['finishedat'] - $e['st'])) . '/s</span></td>') . "\n";
+            $body .= '' . ($site_config['ratio_free'] ? '' : "<td><span style=\"white-space: nowrap;\">" . mksize(($e['downloaded'] - $e['downloadoffset']) / max(1, $e['finishedat'] - $e['st'])) . '/s</span></td>') . "\n";
         }
-        $htmlout .= '<td>' . member_ratio($e['uploaded'], $site_config['ratio_free'] ? '0' : $e['downloaded']) . "</td>\n";
-        $htmlout .= "<td>" . sprintf('%.2f%%', 100 * (1 - ($e['to_go'] / $torrent['size']))) . "</td>\n";
-        $htmlout .= "<td>" . mkprettytime($now - $e['st']) . "</td>\n";
-        $htmlout .= "<td>" . mkprettytime($now - $e['la']) . "</td>\n";
-        $htmlout .= "<td>" . htmlsafechars(getagent($e['agent'], $e['peer_id'])) . "</td>\n";
-        $htmlout .= "</tr>\n";
+        $body .= '<td>' . member_ratio($e['uploaded'], $site_config['ratio_free'] ? '0' : $e['downloaded']) . "</td>\n";
+        $body .= "<td>" . sprintf('%.2f%%', 100 * (1 - ($e['to_go'] / $torrent['size']))) . "</td>\n";
+        $body .= "<td>" . mkprettytime($now - $e['st']) . "</td>\n";
+        $body .= "<td>" . mkprettytime($now - $e['la']) . "</td>\n";
+        $body .= "<td>" . htmlsafechars(getagent($e['agent'], $e['peer_id'])) . "</td>\n";
+        $body .= "</tr>";
     }
-    $htmlout .= "</table>\n";
+    $htmlout = "<h3 class='has-text-centered'>" . count($arr) . " $name" . plural(count($arr)) . "</h3>" . main_table($body, $heading);
 
     return $htmlout;
 }
@@ -131,7 +146,8 @@ function seed_sort($a, $b)
 
 usort($seeders, 'seed_sort');
 usort($downloaders, 'leech_sort');
-$HTMLOUT .= "<h1>Peerlist for <a href='{$site_config['baseurl']}/details.php?id=$id'>" . htmlsafechars($row['name']) . '</a></h1>';
+$HTMLOUT .= "
+    <h1 class='has-text-centered'>Peerlist for <a href='{$site_config['baseurl']}/details.php?id=$id'>" . htmlsafechars($row['name']) . "</a></h1>";
 $HTMLOUT .= dltable("{$lang['peerslist_seeders']}<a name='seeders'></a>", $seeders, $row);
 $HTMLOUT .= '<br>' . dltable("{$lang['peerslist_leechers']}<a name='leechers'></a>", $downloaders, $row);
-echo stdhead("{$lang['peerslist_stdhead']}") . $HTMLOUT . stdfoot();
+echo stdhead($lang['peerslist_stdhead'], true) . wrapper($HTMLOUT) . stdfoot();
